# test_case_mango

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
app/: .env.example  main.py
app/alembic/: env.py
app/alembic/versions/: 0d0d9afd78e5_initial.py
app/core/: config.py  dependencies.py
app/endpoints/: api.py  chat.py  health.py  user.py  websocket.py
app/models/: __init__.py  chat.py  user.py
app/repositories/: chat_repository.py  health_repository.py  user_repository.py  websocket_repository.py
app/schemas/: chat.py  liveness.py  problem.py  user.py
app/services/: chat_service.py  health_service.py  user_service.py  websocket.py
